Prepend device id in zip output filename

--- a/src/pages/download.astro
+++ b/src/pages/download.astro
@@ -31,7 +31,17 @@ import ErrorPage from "../components/ErrorPage.astro";
     }
   };
 
+  const handleDeviceIdSearchParams = () => {
+    const urlParams = new URLSearchParams(window.location.search);
+    const deviceId = urlParams.get("deviceId");
+    if (deviceId != null) {
+      // @ts-expect-error // Inject deviceId into window
+      window.targetDeviceId = deviceId;
+    }
+  };
+
   hideUnuseScreen();
+  handleDeviceIdSearchParams();
 </script>
 
 <BaseLayout>
@@ -60,7 +70,7 @@ import ErrorPage from "../components/ErrorPage.astro";
       <img class="formxai-ad__image" src="/Images/oursky/formxai-ad.png" />
     </a>
 
-    <button class="download-btn" onclick="generateZIP()"
+    <button class="download-btn" onclick="generateZIP(window.targetDeviceId)"
       >Download my mockups</button
     >
 
