Use d-sm-flex over d-sm-block for default share header

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -156,7 +156,7 @@ const { shouldRenderSearchBar, isHeaderTransparent = false } = Astro.props;
             height={16}
           />
           <!-- sharing section for large sceren width, also fallback for small screen width not support share api -->
-          <div class="header__share-default d-none d-sm-block">
+          <div class="header__share-default d-none d-sm-flex">
             <a
               href="https://www.facebook.com/sharer/sharer.php?u=https://mockuphone.com"
               class="header__share-facebook-link"
