Introduce tailwind-like util classes

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,6 +2,7 @@
 import "/src/styles/bootstrap/bootstrap.min.css";
 import "/src/styles/bootstrap/bootstrap-grid.min.css";
 import "/src/styles/main.css";
+import "/src/styles/tailwind.css";
 import { Image } from "@astrojs/image/components";
 
 const title = "MockUPhone";
