Adjust device list table column width

--- a/src/components/ListItem.astro
+++ b/src/components/ListItem.astro
@@ -85,10 +85,10 @@ const lineItems = dedupe(DEVICE_MANAGER.allDeviceModels, deviceArray);
   </colgroup>
   <thead>
     <tr>
-      <th>Model</th>
-      <th>Color</th>
-      <th>Available Perspectives</th>
-      <th>Credits</th>
+      <th style="width: 30%">Model</th>
+      <th style="width: 20%">Color</th>
+      <th style="width: 20%">Available Perspectives</th>
+      <th style="width: 30%">Credits</th>
     </tr>
   </thead>
   <tbody>
