Update new devices credits

--- a/src/pages/attribution.astro
+++ b/src/pages/attribution.astro
@@ -159,6 +159,35 @@ import BaseLayout from "../layouts/BaseLayout.astro";
           > -
           <a href="https://twitter.com/@elegantthemes">@elegantthemes</a><br />
         </p>
+        <p>
+          Samsung Galaxy S24 Ultra:<br />
+          <a href='\"https://www.skymakers.digital/\"' target='\"blank\"'
+            >Skymaker's Designer</a
+          >
+        </p>
+
+        <p>
+          Google Pixel 8:<br />
+          <a
+            href='\"https://www.figma.com/@sajjadmohamamdi\"'
+            target='\"blank\"'>Sajjad Mohammadi Nia</a
+          >
+        </p>
+
+        <p>
+          Google Pixel 7:<br />
+          <a href='\"https://www.figma.com/@brixtemplates\"' target='\"blank\"'
+            >BRIX Templates</a
+          >
+        </p>
+
+        <p>
+          Huawei P40 Pro+:<br />
+          <a
+            href='\"https://www.designbolts.com/2020/06/09/free-huawei-p40-pro-plus-mockup-psd-ai/\"'
+            target='\"blank\"'>DesignBolts</a
+          >
+        </p>
       </div>
     </div>
   </div>
