--- a/src/styles/upload.css
+++ b/src/styles/upload.css
@@ -120,10 +120,35 @@ main {
   padding: 10px 20px;
 }
 
+.upload__image-wrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
 .upload__device-image {
   width: 100%;
   height: 100%;
   object-fit: contain;
+}
+
+.upload__device-image-rect-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.upload__device-image-rect {
+  position: relative;
+}
+
+.upload__device-image-rect__screen-rect {
+  position: absolute;
 }
 
 .upload__device-hint {
