Make twitter links open in new tab

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -179,6 +179,7 @@ const {
             <a
               href="https://x.com/intent/tweet?utm_source=twitter_web_centreButton&utm_medium=twitter&utm_campaign=twitter_web_centreButton&url=https://mockuphone.com/&via=oursky&text=One click to wrap your app screenshots in device mockup!"
               class="header__share-twitter-link"
+              target="_blank"
             >
               <Image
                 class="header__share-twitter"
