--- a/src/pages/download.astro
+++ b/src/pages/download.astro
@@ -91,6 +91,7 @@ import ErrorPage from "../components/ErrorPage.astro";
         <li class="share-social-item">
           <a
             href="https://x.com/intent/tweet?utm_source=twitter_web_centreButton&utm_medium=twitter&utm_campaign=twitter_web_centreButton&url=https://mockuphone.com/&via=oursky&text=One click to wrap your app screenshots in device mockup!"
+            target="_blank"
           >
             <img src="/Images/x-icon-circle.svg" />
           </a>
