Update title in title case

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ const brandItems = getBrandItems(DEVICE_MANAGER);
   <div class="landing-content">
     <header class="headline">
       <h2 class="headline__title">
-        Free and simple screenshots device mockups generator
+        Free and Simple Screenshots Device Mockups Generator
       </h2>
       <p class="headline__desc">
         Wrap your design in mobile devices in a few clicks!
