--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -9,7 +9,9 @@ const title = "MockUPhone";
 const description =
   "MockUPhone is a free tool that helps you wrap app screenshots in different mobile devices. Support iPhone mockup, iPad mockup, Android mockup and TV mockup.";
 const social_url = "home_url";
-const social_icon = "/Images/mockuphone-logo.png";
+const social_icon = `${
+  import.meta.env.PUBLIC_BASE_URL
+}/Images/mockuphone-logo.png`;
 const {
   shouldRenderSearchBar,
   isHeaderTransparent = false,
