Allow select .jpeg file from file picker

--- a/src/pages/model/[model].astro
+++ b/src/pages/model/[model].astro
@@ -231,7 +231,7 @@ if (deviceDetail.imagePath != null && deviceDetail.imagePath.length >= 1) {
               id="download"
               type="file"
               name="file[]"
-              accept=".jpg,.png,.psd"
+              accept=".jpg,.jpeg,.png,.psd"
               multiple
             />
           </div>
