--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -24,16 +24,22 @@ import BaseLayout from "../layouts/BaseLayout.astro";
         </p>
         <h3>About the creator</h3>
         <p>
-          MockUPhone.com is developed by <a href="http://oursky.com/">Oursky</a
-          >, and open sourced at <a
-            href="https://github.com/oursky/mockuphone.com"
-          >
-            https://github.com/oursky/mockuphone.com</a
-          >. We're a team of 70+, create apps, design and custom software for
-          our clients, from Apple App of the Years startups to NASDAQ listed
-          companies. Feel free to send us an <a
-            href="https://www.oursky.com/findus">enquiry</a
-          > and discuss your big ideas with us.
+          MockUPhone.com is developed by
+          <a href="https://www.skymakers.digital/">Skymakers</a> and is
+          open-sourced at <a href="https://github.com/oursky/mockuphone.com"
+            >https://github.com/oursky/mockuphone.com</a
+          >. We are a team of 70+ professionals dedicated to creating apps,
+          designing, and providing custom software solutions for our clients,
+          ranging from award-winning startups to NASDAQ-listed companies. At
+          Skymakers, we offer innovative products like
+          <a href="https://www.authgear.com/">Authgear</a>, which provides
+          simple and scalable authentication solutions, and
+          <a href="http://formx.ai/">FormX.ai</a>, designed to automate data
+          extraction and eliminate manual work. Our expertise in software
+          development ensures that we deliver exceptional value to our clients.
+          Feel free to send us an <a href="https://www.oursky.com/findus"
+            >enquiry</a
+          > and discuss your big ideas with us!
         </p>
       </div>
     </div>
