--- a/src/pages/download.astro
+++ b/src/pages/download.astro
@@ -50,6 +50,7 @@ import ErrorPage from "../components/ErrorPage.astro";
     name="description"
     content="I've just used MockUPhone to wrap my app screenshots. It supports lots of devices including iPhone mockup, iPad mockup, Android mockup and TV mockup."
   />
+  <script type="text/javascript" src="/scripts/autoDownload.js"></script>
   <script type="text/javascript" src="/scripts/jszip.js"></script>
   <script
     type="text/javascript"
