Update download btn copywriting

--- a/src/pages/download.astro
+++ b/src/pages/download.astro
@@ -72,7 +72,7 @@ import ErrorPage from "../components/ErrorPage.astro";
     </a>
 
     <button class="download-btn" onclick="generateZIP(window.targetDeviceId)"
-      >Download my mockups</button
+      >Download again</button
     >
 
     <section class="share">
