Restructure developerTools page

--- a/src/pages/developerTools/DeveloperToolCard.astro
+++ b/src/pages/developerTools/DeveloperToolCard.astro
@@ -1,5 +1,5 @@
 ---
-import "./developerToolCard.css";
+import "./developer-tools-card.css";
 const { url, imageSrc, title, content, id } = Astro.props;
 ---
 
