--- a/src/pages/developerTools/index.astro
+++ b/src/pages/developerTools/index.astro
@@ -1,7 +1,7 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
-import DeveloperToolCard from "../components/DeveloperToolCard/DeveloperToolCard.astro";
-import "/src/styles/developer-tools.css";
+import BaseLayout from "../../layouts/BaseLayout.astro";
+import DeveloperToolCard from "./DeveloperToolCard.astro";
+import "./index.css";
 ---
 
 <BaseLayout>
