--- a/src/pages/developerTools/index.astro
+++ b/src/pages/developerTools/index.astro
@@ -20,7 +20,7 @@ import "./index.css";
           <DeveloperToolCard
             url="https://www.formx.ai/"
             id="formxai-card"
-            imageSrc="images/formxai-logo.svg"
+            imageSrc="/images/formxai-logo.svg"
             title="FormX.ai"
             content="Empower Your Team with AI: Eliminate Manual Work, Embrace Seamless Automation!"
           />
@@ -29,7 +29,7 @@ import "./index.css";
           <DeveloperToolCard
             url="https://www.authgear.com/"
             id="authgear-card"
-            imageSrc="images/authgear-logo.svg"
+            imageSrc="/images/authgear-logo.svg"
             title="Authgear"
             content="Activate Security with Auth, Simple and Scalable for Your Business."
           />
@@ -38,7 +38,7 @@ import "./index.css";
           <DeveloperToolCard
             url="https://makeappicon.com/"
             id="makeappicon-card"
-            imageSrc="images/makeappicon-logo.svg"
+            imageSrc="/images/makeappicon-logo.svg"
             title="MakeAppIcon"
             content="An icon creator that resizes all iOS icons and Android icons required by App Store and Google Play."
           />
