Fix forward image path

--- a/src/pages/developerTools/DeveloperToolCard.astro
+++ b/src/pages/developerTools/DeveloperToolCard.astro
@@ -12,7 +12,7 @@ const { url, imageSrc, title, content, id } = Astro.props;
     </p>
     <div class="learn-more">
       Learn more
-      <img src="images/arrow-forward.svg" />
+      <img src="/images/arrow-forward.svg" />
     </div>
   </div>
 </a>
