Change calc(100%) into 100%

--- a/src/styles/upload.css
+++ b/src/styles/upload.css
@@ -350,7 +350,7 @@ main {
   display: flex;
 
   .file-list-item__file-info {
-    max-width: calc(100%);
+    max-width: 100%;
   }
 
   &.file-list-item__previewable {
